--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,13 @@
 *.ipa
 *.dSYM.zip
 *.dSYM
-*.DS_Store
+
+## OS generated files 
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
